--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -602,14 +602,11 @@
     "\n",
     "- The optimal policy for the smartcab in the given environment will be to make a move such that the trafic lights are followed that is avoid violations and be aware of vehicals coming from inputs (left, right, upcoming) that is avoid accidents. Some examples of optimal policy will be :\n",
     "\n",
-    "    - \n",
-    "        - `waypoint     light    left      right    upcoming`  \n",
+    "    - If the light is red and the waypoint is right, the agent should take a right unless there is no trafic from left going forward and no trafic from upcoming going left, then the agent should not make any move.\n",
+    "    - If the light is red and the waypoint is not right, the agent should not make any move.\n",
+    "    - If the light is green and the waypoint is forward or right, the agent should make a move to either forward or right.\n",
+    "    - If the light is green and the waypoint is left, the agent should make a move towards left unless no trafic from upcoming is going right, then the agent should not make a move.\n",
     "\n",
-    "        - `right        green    None      left     right   `\n",
-    "\n",
-    "        - `forward      green    None      None     None    `\n",
-    "  \n",
-    "        - `right        green    None      left     forward `\n",
     "\n",
     "- Yes, there are states where the policy is different than what would be expected from an optimal policy. \n",
     "\n",
