--- a/smartcab.ipynb
+++ b/smartcab.ipynb
@@ -570,7 +570,7 @@
     "    - `ϵ=cos(at),for 0<a<1`\n",
     "- We chose `ϵ=cos(at),for 0<a<1` as our epsilon function that is the exploration factor.\n",
     "- Approximately `450` training trials were needed for the agent before begining testing.\n",
-    "- Tolerance is set to `0.05` ans alpha is a decay function of `e**(−4at),for 0<a<1`. Decaying alpha allows to begin with a high learning rate and decrease it over the course of training trials. Beginning with a higher learning rate will attribute more weight to new results, and steadily lowering it to a relatively small number will allow the agent to gradually switch to an exploitation of the Q-table and policies. As the data shows that agent learns best with these values and gives us A+ in both safty and reliability with reasonable number of trials. \n",
+    "- Tolerance is set to `0.05` and alpha is a decay function of `e**(−4at),for 0<a<1`. Decaying alpha allows to begin with a high learning rate and decrease it over the course of training trials. Beginning with a higher learning rate will attribute more weight to new results, and steadily lowering it to a relatively small number will allow the agent to gradually switch to an exploitation of the Q-table and policies. As the data shows that agent learns best with these values and gives us A+ in both safty and reliability with reasonable number of trials. \n",
     "- Safty went up from `F` to `A+` and reliability from `C` to `A+`. \n",
     "- Yes, the Q-Learner results shows that the driving agent successfully learned an appropriate policy.\n",
     "- Yes, I am satisfied with the safety and reliability ratings of the Smartcab as it cannot get any better than `A+`. "
